--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,13 @@
   <head>
     <title>{{ page.title }}</title>
 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-static-top hidden">
+    <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,7 +21,14 @@
         </div>
 
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://github.com/programble">
+              <i class="icon-github-alt"></i> Github
+            </a></li>
+
+            <li><a href="mailto:programble@gmail.com">
+              <i class="icon-envelope"></i> Email
+            </a></li>
           </ul>
         </div>
       </div>
