Capitalize the H in GitHub
This matches their branding.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/programble">
-              <i class="icon-github-alt"></i> Github
+              <i class="icon-github-alt"></i> GitHub
             </a></li>
 
             <li><a href="https://bitbucket.org/programble">
