--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,15 @@
 
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {% if page.path == 'index.html' %} class="active" {% endif %}>
+            <li {% if page.id == 'about' %} class="active" {% endif %}>
               <a href="/">About</a>
             </li>
 
-            <li {% if page.path == 'projects.html' %} class="active" {% endif %}>
+            <li {% if page.id == 'projects' %} class="active" {% endif %}>
               <a href="/projects.html">Projects</a>
             </li>
 
-            <li {% if page.path == 'resume.html' %} class="active" {% endif %}>
+            <li {% if page.id == 'resume' %} class="active" {% endif %}>
               <a href="/resume.html">Résumé</a>
             </li>
           </ul>
