Use Font Awesome 4.0.1

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-static-top">
@@ -37,15 +37,15 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/programble">
-              <i class="icon-github-alt"></i> GitHub
+              <i class="fa fa-github-alt"></i> GitHub
             </a></li>
 
             <li><a href="https://bitbucket.org/programble">
-              <i class="icon-bitbucket"></i> Bitbucket
+              <i class="fa fa-bitbucket"></i> Bitbucket
             </a></li>
 
             <li><a href="mailto:programble@gmail.com">
-              <i class="icon-envelope"></i> Email
+              <i class="fa fa-envelope"></i> Email
             </a></li>
           </ul>
         </div>
