Use // for Gravatar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }} · {{ site.name }}</title>
 
     <meta charset="utf-8">
-    <link rel="icon" type="image/jpeg" href="http://gravatar.com/avatar/{{ site.gravatar }}?s=16">
+    <link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
