Use curtis@cmcenroe.me

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
               <i class="fa fa-github-alt"></i> GitHub
             </a></li>
 
-            <li><a href="mailto:programble@gmail.com">
+            <li><a href="mailto:{{ site.email }}">
               <i class="fa fa-envelope"></i> Email
             </a></li>
           </ul>
