Add LinkedIn profile to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,10 @@
               <i class="fa fa-github-alt"></i> GitHub
             </a></li>
 
+            <li><a href="http://ca.linkedin.com/pub/curtis-mcenroe/9a/31a/132/">
+              <i class="fa fa-linkedin"> LinkedIn
+            </a></li>
+
             <li><a href="mailto:{{ site.email }}">
               <i class="fa fa-envelope"></i> Email
             </a></li>
