--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             </a></li>
 
             <li><a href="http://ca.linkedin.com/pub/curtis-mcenroe/9a/31a/132/">
-              <i class="fa fa-linkedin"> LinkedIn
+              <i class="fa fa-linkedin"></i> LinkedIn
             </a></li>
 
             <li><a href="mailto:{{ site.email }}">
