--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,19 @@
 layout: default
 ---
 
-<div class="page-header">
-  <h1>
-    {{ page.title }}
-  </h1>
-  <small>Posted {{ page.date | date: "%A, %-d %B, %Y" }}</small>
-</div>
 
-{{ content }}
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="page-header">
+      <h1>
+        {{ page.title }}
+      </h1>
+      <small>{{ page.date | date: "%A, %-d %B, %Y" }}</small>
+    </div>
+
+    {{ content }}
+  </div>
+</div>
 
 <div style="padding-bottom: 50px">
   <!-- Forgive me -->
