--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,9 @@ layout: narrow
   <small>{{ page.date | date: "%A, %-d %B, %Y" }}</small>
 </div>
 
-{{ content }}
+<section class="post-body">
+  {{ content }}
+</div>
 
 <div style="padding-bottom: 50px">
   <!-- Forgive me -->
