Add link to Keybase

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,10 @@
             <li><a href="mailto:{{ site.email }}">
               <i class="fa fa-envelope"></i> Email
             </a></li>
+
+            <li><a href="https://keybase.io/programble">
+              <i class="fa fa-lock"></i> Keybase
+            </a></li>
           </ul>
         </div>
       </div>
