--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,31 +29,21 @@
 
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {% if page.id == 'projects' %} class="active" {% endif %}>
-              <a href="/projects.html">Projects</a>
-            </li>
-
-            <li {% if page.id == 'resume' %} class="active" {% endif %}>
-              <a href="/resume.html">Résumé</a>
-            </li>
+            {% for nav_page in site.nav.pages %}
+              <li {% if page.id == nav_page.id %} class="active" {% endif %}>
+                <a href="/{{ nav_page.id }}.html">{{ nav_page.name }}</a>
+              </li>
+            {% endfor %}
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/programble">
-              <i class="fa fa-github-alt"></i> GitHub
-            </a></li>
-
-            <li><a href="http://ca.linkedin.com/pub/curtis-mcenroe/9a/31a/132/">
-              <i class="fa fa-linkedin"></i> LinkedIn
-            </a></li>
-
-            <li><a href="mailto:{{ site.email }}">
-              <i class="fa fa-envelope"></i> Email
-            </a></li>
-
-            <li><a href="https://keybase.io/programble">
-              <i class="fa fa-lock"></i> Keybase
-            </a></li>
+            {% for link in site.nav.links %}
+              <li>
+                <a href="{{ link.href }}">
+                  <i class="fa {{ link.icon }}"></i> {{ link.name }}
+                </a>
+              </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
