--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,6 @@
 layout: narrow
 ---
 
-
 <div class="page-header">
   <h1>
     {{ page.title }}
@@ -12,7 +11,7 @@ layout: narrow
 
 <section class="post-body">
   {{ content }}
-</div>
+</section>
 
 <div style="padding-bottom: 50px">
   <!-- Forgive me -->
