--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,50 +11,40 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cmcenroe.me/writ/writ.min.css">
     <link rel="stylesheet" href="/css/site.css">
   </head>
+
   <body>
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">{{ site.name }}</a>
-        </div>
+    <header>
+      <h1>Curtis McEnroe</h1>
 
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            {% for nav_page in site.nav.pages %}
-              <li {% if page.id == nav_page.id %} class="active" {% endif %}>
-                <a href="/{{ nav_page.id }}.html">{{ nav_page.name }}</a>
-              </li>
-            {% endfor %}
-          </ul>
+      <nav>
+        <ul>
+          {% for nav_page in site.nav.pages %}
+            <li><a href="{{ nav_page.href }}">{{ nav_page.name }}</a></li>
+          {% endfor %}
+        </ul>
+      </nav>
 
-          <ul class="nav navbar-nav navbar-right">
-            {% for link in site.nav.links %}
-              <li>
-                <a href="{{ link.href }}">
-                  <i class="fa {{ link.icon }}"></i> {{ link.name }}
-                </a>
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      </div>
-    </nav>
+      <nav>
+        <ul>
+          {% for link in site.nav.links %}
+            <li>
+              <a href="{{ link.href }}">
+                <i class="fa {{ link.icon }}"></i> {{ link.name }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </header>
 
-    <div class="container">
+    <article>
       {{ content }}
-    </div>
+    </article>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
