--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,15 @@
 layout: default
 ---
 
-<div class="page-header">
-  <h1>
-    {{ page.title }}
-  </h1>
-  <small>{{ page.date | date: "%A, %-d %B, %Y" }}</small>
-</div>
+<h2>{{ page.title }}</h2>
+<p>
+  <small>
+    <time datetime="{{ page.date | date:'%Y-%m-%d' }}">
+      {{ page.date | date:'%A, %-d %B, %Y' }}
+    </time>
+  </small>
+</p>
 
 <section class="post-body">
   {{ content }}
 </section>
-
-<div style="padding-bottom: 50px">
-  <!-- Forgive me -->
-</div>
