--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,7 @@
+nav a:visited { color: #00e; }
+
 /* Rouge highlighter */
-.k, .kc, .kd { color: #990; }
+.k, .kc, .kd { color: #770; }
 .na, .nt { color: #900; }
 .nb, .mi { color: #009; }
 .p { color: #555; }
@@ -7,27 +9,21 @@
 
 /* Footnotes */
 .post-body ol:last-child {
-  padding-top: 20px;
+  padding-top: 2em;
   font-size: 75%;
+  line-height: 1.5em;
 }
 
 /* Formula and table-of-values formatting for days-in-month post */
 
-var, .formula {
-  font-family: Georgia,serif;
-}
+p.formula { text-align: center; }
 
-p.formula {
-  font-size: 130%;
-  text-align: center;
-}
-
-table.tov {
-  font-family: Georgia,serif;
-  text-align: right;
-}
+table.tov { text-align: right; }
 
 table.tov th {
   font-weight: normal;
   border-right-width: 2px !important;
 }
+
+table.tov td.y { background-color: #9e9; }
+table.tov td.n { background-color: #e99; }
