Adapt resume to Writ

--- a/css/site.css
+++ b/css/site.css
@@ -1,30 +1,33 @@
-nav a:visited { color: #00e; }
-
+/* General reusable stuff (from Bootstrap) */
 .text-center { text-align: center; }
+.float-right { float: right; }
+.list-unstyled { padding: 0; }
+.list-unstyled li { list-style-type: none; }
 
+/* Print styles, for resume PDF */
+@media print {
+  body > header { display: none; }
+  .hidden-print { display: none; }
+}
+@media screen {
+  .visible-print { display: none; }
+}
+
+/* Flex */
 div.flex {
   display: -webkit-flex;
   display: flex;
 }
-
 div.flex-wrap {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
 /* Projects page */
-
 div.project {
   width: 30ch;
   padding-right: 1ch;
 }
-
-/* Rouge highlighter */
-.k, .kc, .kd { color: #770; }
-.na, .nt { color: #900; }
-.nb, .mi { color: #009; }
-.p { color: #555; }
-.s, .s1, .s2 { color: #090; }
 
 /* Footnotes */
 .post-body ol:last-child {
@@ -33,16 +36,19 @@ div.project {
   line-height: 1.5em;
 }
 
-/* Formula and table-of-values formatting for days-in-month post */
+/* Rouge highlighter */
+.na, .nt     { color: #900; }
+.s, .s1, .s2 { color: #090; }
+.nb, .mi     { color: #009; }
+.k, .kc, .kd { color: #770; }
+.p           { color: #555; }
 
+/* Days-in-month formula post */
 p.formula { text-align: center; }
-
 table.tov { text-align: right; }
-
 table.tov th {
   font-weight: normal;
-  border-right-width: 2px !important;
+  border-right-width: 2px;
 }
-
 table.tov td.y { background-color: #9e9; }
 table.tov td.n { background-color: #e99; }
