Use // for Writ stylesheet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,14 @@
       <title>{{ site.name }}</title>
     {% endif %}
 
-
     <meta charset="utf-8">
     <link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cmcenroe.me/writ/writ.min.css">
+
+    <link rel="stylesheet" href="//cmcenroe.me/writ/writ.min.css">
     <link rel="stylesheet" href="/css/site.css">
+
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
 
   <body>
