Set mugshot max-width

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<figure>
+<figure class="mugshot">
   <img alt="My face" width="200"
        src="//gravatar.com/avatar/{{ site.gravatar }}?s=200">
 </figure>
