--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,9 +13,9 @@ layout: default
 
 {% for post in site.posts %}
   <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-  <p>
+  <small>
     <time datetime="{{ post.date | date:'%Y-%m-%d' }}">
       {{ post.date | date:'%A, %-d %B, %Y' }}
     </time>
-  </p>
+  </small>
 {% endfor %}
