--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="//cmcenroe.me/writ/0.2.1/writ.min.css">
+<link rel="stylesheet" href="//writ.cmcenroe.me/1.0.0/writ.min.css">
 <link rel="stylesheet" href="/css/site.css">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -39,9 +39,9 @@
   </nav>
 </header>
 
-<article>
+<main>
   {{ content }}
-</article>
+</main>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
