Fix vertical rhythm of post dates

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,13 @@ layout: default
 ---
 
 <h2>{{ page.title }}</h2>
-<small>
-  <time datetime="{{ page.date | date:'%Y-%m-%d' }}">
-    {{ page.date | date:'%A, %-d %B, %Y' }}
-  </time>
-</small>
+<p class="subtitle">
+  <small>
+    <time datetime="{{ page.date | date:'%Y-%m-%d' }}">
+      {{ page.date | date:'%A, %-d %B, %Y' }}
+    </time>
+  </small>
+</p>
 
 <section class="post-body">
   {{ content }}
