--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 
 <link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% feed_meta %}
 
 <link rel="stylesheet" href="//writ.cmcenroe.me/1.0.2/writ.min.css">
 <link rel="stylesheet" href="/css/site.css">
