--- a/css/site.css
+++ b/css/site.css
@@ -51,9 +51,11 @@ div.pdf-link { margin-top: 0.75rem; }
 nav.discussions { font-size: 0.833em; }
 nav.discussions ul { margin-top: 0; }
 
-article ol:last-child {
-  margin-top: 3rem;
+div.footnotes ol {
   font-size: 0.833em;
+}
+div.footnotes ol li p {
+  margin-top: 0;
 }
 
 /* Rouge highlighter */
