--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,54 +1,7 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-
-{% if page.title %}
-  <title>{{ page.title }} · {{ site.name }}</title>
-{% else %}
-  <title>{{ site.name }}</title>
-{% endif %}
-
-<link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
-{% feed_meta %}
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="//writ.cmcenroe.me/1.0.2/writ.min.css">
-<link rel="stylesheet" href="/css/site.css">
-
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-<header>
-  <h1>Curtis McEnroe</h1>
-
-  <nav>
-    <ul>
-      {% for nav_page in site.nav.pages %}
-        <li><a href="{{ nav_page.href }}">{{ nav_page.name }}</a></li>
-      {% endfor %}
-    </ul>
-  </nav>
-
-  <nav>
-    <ul>
-      {% for link in site.nav.links %}
-        <li>
-          <a href="{{ link.href }}">
-            <i class="fa {{ link.icon }}"></i> {{ link.name }}
-          </a>
-        </li>
-      {% endfor %}
-    </ul>
-  </nav>
-</header>
+---
+layout: layout
+---
 
 <main>
   {{ content }}
 </main>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-47663946-1', 'cmcenroe.me');
-  ga('send', 'pageview');
-</script>
