--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,6 +8,7 @@
 {% endif %}
 
 <link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
+{% feed_meta %}
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="//writ.cmcenroe.me/1.0.2/writ.min.css">
