--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <figure class="mugshot">
   <img alt="My face" width="200"
-       src="//gravatar.com/avatar/{{ site.gravatar }}?s=200">
+       src="/image/face.jpg">
 </figure>
 
 {{ content }}
