--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,7 +7,7 @@
   <title>{{ site.name }}</title>
 {% endif %}
 
-<link rel="icon" type="image/jpeg" href="//gravatar.com/avatar/{{ site.gravatar }}?s=16">
+<link rel="icon" type="image/jpeg" href="/image/face.jpg">
 {% feed_meta %}
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
