--- a/_includes/series-nav.html
+++ b/_includes/series-nav.html
@@ -1,4 +1,4 @@
-<nav class="text-center">
+<nav style="text-align: center;">
   <ul>
     {% for post in site.posts %}
       {% if post.series == page.series %}
