--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<figure class="mugshot">
+<figure style="max-width: 25%; margin-top: 0;">
   <img alt="My face" width="200"
        src="/image/face.jpg">
 </figure>
