Update face picture
Sure, it's a bathroom selfie, but it's certainly representative of me.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,8 +3,7 @@ layout: default
 ---
 
 <figure style="max-width: 25%; margin-top: 0;">
-  <img alt="My face" width="200"
-       src="/image/face.jpg">
+  <img style="border-radius: 2px;" alt="My face" src="/image/face.jpg">
 </figure>
 
 {{ content }}
